syntax = "proto2";

import "scalapb/scalapb.proto";
import "v1/agreement.proto";

option (scalapb.options) = {
  package_name: "it.pagopa.interop.agreementmanagement.model.persistence.serializer.v1"
  no_default_values_in_constructor : true
};

message AgreementAddedV1 {
  required AgreementV1 agreement = 1;
}

message AgreementActivatedV1 {
  required AgreementV1 agreement = 1;
}

message AgreementSuspendedV1 {
  required AgreementV1 agreement = 1;
}

message AgreementDeactivatedV1 {
  required AgreementV1 agreement = 1;
}

message VerifiedAttributeDocumentAddedV1 {
  required string agreementId = 1;
  required string attributeId = 2;
  required VerifiedAttributeDocumentV1 document = 3;
}

message VerifiedAttributeDocumentRemovedV1 {
  required string agreementId = 1;
  required string attributeId = 2;
  required string documentId = 3;
}
