syntax = "proto2";

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "it.pagopa.pdnd.interop.uservice.agreementmanagement.model.persistence.serializer.v1"
};

import "v1/agreement.proto";


message StateV1 {
  repeated AgreementsV1 agreements = 1;
}

message AgreementsV1 {
  required  string key = 1;
  required AgreementV1 value = 2;
}
